feat: add blocks functionality

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -34,9 +34,12 @@
     "@saas-ui/palette": "workspace:*",
     "@saas-ui/props-docs": "workspace:*",
     "@saas-ui/react": "workspace:*",
+    "@supabase/ssr": "^0.0.5",
+    "@supabase/supabase-js": "^2.38.4",
     "@svgr/webpack": "^5.5.0",
     "@vercel/og": "^0.5.13",
     "canvas-confetti": "^1.6.0",
+    "change-case": "^5.1.2",
     "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
@@ -60,6 +63,7 @@
     "remark-emoji": "^3.1.2",
     "remark-gfm": "^3.0.1",
     "remark-slug": "^7.0.1",
+    "use-http": "^1.0.28",
     "yup": "^1.2.0",
     "zod": "^3.22.2"
   },
