--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -87,9 +87,9 @@
     "@chakra-ui/system": "^2.6.1",
     "@chakra-ui/theme-tools": "^2.1.1",
     "@chakra-ui/utils": "^2.0.15",
+    "@react-aria/utils": "^3.22.0",
     "@saas-ui/react-utils": "workspace:*",
-    "@saas-ui/theme": "workspace:*",
-    "@react-aria/utils": "^3.22.0"
+    "@saas-ui/theme": "workspace:*"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.0",
