--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -77,6 +77,7 @@
     "electron-to-chromium": "^1.4.522",
     "eslint": "^8.49.0",
     "eslint-config-next": "^14.0.1",
+    "file-loader": "^6.2.0",
     "typescript": "^5.2.2"
   }
 }
