fix: frame issues

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -20,42 +16,23 @@
     "baseUrl": ".",
     "downlevelIteration": true,
     "paths": {
-      "@/components/*": [
-        "src/components/*"
-      ],
-      "@/data/*": [
-        "src/data/*"
-      ],
-      "@/utils/*": [
-        "src/utils/*"
-      ],
-      "@/layouts/*": [
-        "src/layouts/*"
-      ],
-      "@/lib/*": [
-        "src/lib/*"
-      ],
-      "@/docs/*": [
-        "src/docs/*"
-      ],
-      "@/hooks/*": [
-        "src/hooks/*"
-      ],
-      "@saas-ui/react": [
-        "../../packages/saas-ui-react/src"
-      ],
-      "contentlayer/generated": [
-        "./.contentlayer/generated"
-      ],
+      "@/components/*": ["src/components/*"],
+      "@/data/*": ["src/data/*"],
+      "@/utils/*": ["src/utils/*"],
+      "@/layouts/*": ["src/layouts/*"],
+      "@/lib/*": ["src/lib/*"],
+      "@/docs/*": ["src/docs/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@saas-ui/react": ["../../packages/saas-ui-react/src"],
+      "contentlayer/generated": ["./.contentlayer/generated"],
       "@saas-ui-pro/feature-flags": [
         "../../packages/pro/saas-ui/feature-flags/src"
       ],
-      "@saas-ui-pro/react": [
-        "../../packages/pro/saas-ui/react/src"
+      "@saas-ui-pro/react": ["../../packages/pro/saas-ui/react/src"],
+      "@saas-ui-pro/theme-glass": [
+        "../../packages/pro/saas-ui/pro-theme-glass/src"
       ],
-      "@saas-ui-pro/kanban": [
-        "../../packages/pro/saas-ui/kanban/src"
-      ]
+      "@saas-ui-pro/kanban": ["../../packages/pro/saas-ui/kanban/src"]
     },
     "incremental": true,
     "plugins": [
@@ -72,7 +49,5 @@
     "src",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
