--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "packages/saas-ui-*",
     "tooling/next-workspaces",
     "tooling/test-utils",
-    "tooling/props-docs"
+    "tooling/props-docs",
+    "tooling/storybook-addon"
   ],
   "devDependencies": {
     "@chakra-ui/cli": "^2.4.1",
