--- a/packages/saas-ui-theme/package.json
+++ b/packages/saas-ui-theme/package.json
@@ -19,12 +19,25 @@
     },
     "./anatomy/src": {
       "default": "./src/anatomy/index.ts"
+    },
+    "./components": {
+      "types": "./dist/components/index.d.ts",
+      "import": "./dist/components/index.mjs",
+      "require": "./dist/components/index.js"
+    },
+    "./components/*": {
+      "types": "./dist/components/*.d.ts",
+      "import": "./dist/components/*.mjs",
+      "require": "./dist/components/*.js"
     }
   },
   "typesVersions": {
     "*": {
       "anatomy": [
         "./dist/anatomy/index.d.ts"
+      ],
+      "components": [
+        "./dist/components/index.d.ts"
       ]
     }
   },
