--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -87,9 +87,11 @@
     "@chakra-ui/system": "^2.6.1",
     "@chakra-ui/theme-tools": "^2.1.1",
     "@chakra-ui/utils": "^2.0.15",
+    "@react-aria/interactions": "^3.20.1",
     "@react-aria/utils": "^3.22.0",
     "@saas-ui/react-utils": "workspace:*",
     "@saas-ui/theme": "workspace:*",
+    "@zag-js/dom-event": "^0.32.0",
     "@zag-js/dom-utils": "^0.2.4"
   },
   "peerDependencies": {
