--- a/packages/saas-ui-hotkeys/package.json
+++ b/packages/saas-ui-hotkeys/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/hotkeys",
-  "version": "2.1.12",
+  "version": "2.1.13",
   "description": "Easy manageable keyboard shortcuts for Chakra UI",
   "source": "src/index.ts",
   "exports": {
@@ -60,7 +60,8 @@
   "dependencies": {
     "@chakra-ui/react-utils": "^2.0.12",
     "@chakra-ui/utils": "^2.0.15",
-    "@saas-ui/core": "workspace:*"
+    "@saas-ui/core": "workspace:*",
+    "@saas-ui/use-hotkeys": "workspace:*"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.9",
