--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -65,6 +65,7 @@
     "@react-aria/calendar": "^3.5.3",
     "@react-aria/datepicker": "^3.9.0",
     "@react-aria/i18n": "^3.9.0",
+    "@react-aria/interactions": "^3.20.1",
     "@react-stately/calendar": "^3.4.2",
     "@react-stately/datepicker": "^3.9.0",
     "@saas-ui/core": "workspace:*",
