--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lint:staged": "lint-staged --allow-empty --config lint-staged.config.js",
     "create:pkg": "hygen package chakra-component",
     "build:web": "yarn w website build",
-    "build:tokens": "chakra-cli tokens packages/saas-ui-theme/src/saas-ui",
+    "build:tokens": "chakra-cli tokens packages/saas-ui-theme/src/saas-ui/theme.ts",
     "build:packages": "turbo run build --filter='./packages/saas-ui-*' --filter='!./packages/pro/*' --concurrency=5 --no-deps --continue && yarn build:tokens",
     "build:packages:force": "turbo run build --filter='./packages/saas-ui-*' --filter='!./packages/pro/*' --concurrency=5 --no-deps --continue --force && yarn build:tokens",
     "watch:theme": "turbo run build --filter='./packages/saas-ui-theme' -- --watch",
@@ -75,6 +75,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@manypkg/get-packages": "^1.1.3",
+    "@storybook/testing-react": "^2.0.1",
     "@swc/core": "^1.3.85",
     "@types/node": "^18.17.16",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -94,7 +95,7 @@
     "lint-staged": "^13.3.0",
     "lodash": "^4.17.21",
     "node-releases": "^2.0.13",
-    "prettier": "^2.8.8",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -103,9 +104,11 @@
     "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
+    "tsx": "^4.7.0",
     "turbo": "^1.10.13",
     "typescript": "^5.2.2",
     "vercel-submodules": "^1.0.10",
+    "vitest": "^0.34.4",
     "yup": "^1.2.0",
     "zod": "^3.22.2"
   },
@@ -116,11 +119,5 @@
     "@emotion/styled": "11.11.0",
     "@zag-js/store": "^0.30.0"
   },
-  "packageManager": "yarn@4.0.2",
-  "dependencies": {
-    "@storybook/testing-react": "^2.0.1",
-    "@types/prettier": "^3.0.0",
-    "tsx": "^4.7.0",
-    "vitest": "^0.34.4"
-  }
+  "packageManager": "yarn@4.0.2"
 }
