--- a/tooling/props-docs/package.json
+++ b/tooling/props-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/props-docs",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "Extracts prop types for documentation purposes",
   "keywords": [
     "docs",
@@ -14,7 +14,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
-    "lib"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
