--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           node-version: 18.x
 
+      - name: Init submodules
+        run: git submodule update --init --recursive
+
       - name: Install dependencies
         run: yarn
 
