--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -8,14 +8,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          token: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-
-      - name: Init submodules
-        run: git submodule update --init --recursive
 
       - name: Install dependencies
         run: yarn
