--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Install dependencies
         run: yarn
+        env:
+          YARN_ENABLE_IMMUTABLE_INSTALLS: false
 
       - name: Build packages
         run: yarn build:packages
