--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -22,8 +22,10 @@ jobs:
         env:
           YARN_ENABLE_IMMUTABLE_INSTALLS: false
 
-      - name: Build packages
-        run: yarn build:packages
+      # - name: Build packages
+      #   run: yarn build:packages
+      - name: Build theme
+        run: yarn build:theme
 
       - name: Build Storybook addon
         run: yarn build:storybook-addon
