--- a/packages/saas-ui-forms/ajv/tsconfig.json
+++ b/packages/saas-ui-forms/ajv/tsconfig.json
@@ -7,7 +7,8 @@
     "declarationMap": true,
     "baseUrl": ".",
     "paths": {
-      "@saas-ui/forms": ["../"]
+      "@saas-ui/forms": ["../"],
+      "@saas-ui/modals": ["../../saas-ui-modals/src"]
     }
   }
 }
