--- a/examples/next-auth/package.json
+++ b/examples/next-auth/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.8.1",
+    "@saas-ui/assets": "^1.0.0",
     "@saas-ui/auth": "^2.4.5",
     "@saas-ui/react": "^2.5.5",
     "framer-motion": "^11.0.3",
