--- a/examples/next-auth/package.json
+++ b/examples/next-auth/package.json
@@ -6,32 +6,38 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "migrate": "prisma migrate dev",
+    "generate": "prisma generate"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.1",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@saas-ui/react": "^2.0.2",
-    "@saas-ui/auth": "^2.0.1",
-    "framer-motion": "^6.3.16",
-    "next": "^13.4.10",
-    "next-auth": "^4.22.1",
-    "nodemailer": "^6.7.8",
+    "@auth/prisma-adapter": "^1.1.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.8.1",
+    "@saas-ui/assets": "^1.0.0",
+    "@saas-ui/auth": "^2.4.5",
+    "@saas-ui/react": "^2.5.5",
+    "framer-motion": "^11.0.3",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "typescript": "^5.1.6"
+    "react-icons": "^5.0.1",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^16.11.41",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5"
+    "@types/node": "^20.11.10",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "prisma": "^5.8.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/saas-js/saas-ui.git",
-    "directory": "examples/nextjs-typescript"
+    "directory": "examples/next-auth"
   },
   "bugs": {
     "url": "https://github.com/saas-js/saas-ui/issues"
