fix: export components src from glass theme

--- a/packages/saas-ui-theme-glass/package.json
+++ b/packages/saas-ui-theme-glass/package.json
@@ -11,6 +11,9 @@
     },
     "./src": {
       "default": "./src/index.ts"
+    },
+    "./src/components/*": {
+      "default": "./src/components/*"
     }
   },
   "main": "./dist/index.js",
