chore: remove unused import

--- a/examples/vite-tsr-spa/tsconfig.json
+++ b/examples/vite-tsr-spa/tsconfig.json
@@ -22,9 +22,9 @@
 
     "baseUrl": ".",
     "paths": {
-      "#/*": ["src/*"]
-    }
+      "#*": ["src/*"],
+    },
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
