--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "ts-node": "^10.9.2",
     "tsup": "^6.7.0",
     "tsx": "^4.7.1",
-    "turbo": "^1.12.4",
+    "turbo": "1.11.3",
     "typescript": "^5.3.3",
     "vercel-submodules": "^1.0.10",
     "vitest": "^0.34.6",
