chore: update to yarn 4.1

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,8 +4,8 @@ enableGlobalCache: true
 
 logFilters:
   - level: discard
-    pattern: '*@npm:* The darwin-* architecture'
+    pattern: "*@npm:* The darwin-* architecture"
 
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-4.0.2.cjs
+yarnPath: .yarn/releases/yarn-4.1.0.cjs
