--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -24,6 +24,10 @@
     "@chakra-ui/react-env": "^3.1.0",
     "@chakra-ui/skip-nav": "^2.1.0",
     "@chakra-ui/system": "^2.6.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/inter": "^5.0.16",
