feat: add getBaseField handler

--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -32,10 +32,10 @@
   "typesVersions": {
     "*": {
       "icons": [
-        "./dist/icons/index.d.ts"
+        "dist/icons/index.d.ts"
       ],
       "utils": [
-        "./dist/utils/index.d.ts"
+        "dist/utils/index.d.ts"
       ]
     }
   },
