--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -121,6 +121,7 @@
     "ajv-errors": "^3.0.0",
     "json-schema-to-ts": "^2.12.0",
     "tsd": "^0.28.1",
+    "typescript": "^5.4.2",
     "yup": "^1.3.3",
     "zod": "^3.22.4"
   },
