--- a/packages/saas-ui-forms/tsconfig.json
+++ b/packages/saas-ui-forms/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "paths": {
-      "@saas-ui/core/icons": ["../saas-ui-core/src/icons"]
+      "@saas-ui/core/icons": ["../saas-ui-core/src/icons"],
+      "@saas-ui/forms/zod": ["./zod/src"],
+      "@saas-ui/forms/yup": ["./yup/src"]
     }
   },
   "include": ["src"],
