chore: fix tests ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
         env:
           YARN_ENABLE_IMMUTABLE_INSTALLS: false
 
+      - name: Build packages
+        run: yarn build:packages
+
       - name: Build tokens
         run: yarn build:tokens
 
