feat: added feature to support global base field for forms and support custom props. (#213)
* feat: add getBaseField handler

* fix: types

* fix: types

* chore: update typescript

* feat: add getBaseField support to zod and yup forms

* feat: add base field support to step form

* feat: update yup form types

* fix: types and build

--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -32,10 +32,10 @@
   "typesVersions": {
     "*": {
       "icons": [
-        "./dist/icons/index.d.ts"
+        "dist/icons/index.d.ts"
       ],
       "utils": [
-        "./dist/utils/index.d.ts"
+        "dist/utils/index.d.ts"
       ]
     }
   },
@@ -103,6 +103,6 @@
     "react-dom": ">=18"
   },
   "devDependencies": {
-    "tsup": "^6.7.0"
+    "tsup": "^8.0.2"
   }
 }
