--- a/package.json
+++ b/package.json
@@ -105,13 +105,13 @@
     "react-test-renderer": "^18.2.0",
     "rimraf": "^4.4.1",
     "ts-node": "^10.9.2",
-    "tsup": "^6.7.0",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "turbo": "1.11.3",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.2",
     "vercel-submodules": "^1.0.10",
     "vitest": "^0.34.6",
-    "yup": "^1.3.3",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "resolutions": {
@@ -123,5 +123,8 @@
     "@zag-js/store": "^0.38.1",
     "@zag-js/file-upload": "^0.38.1"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.0",
+  "dependencies": {
+    "@microsoft/api-extractor": "^7.43.0"
+  }
 }
