--- a/packages/saas-ui-auth0/package.json
+++ b/packages/saas-ui-auth0/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@saas-ui/auth-auth0-web",
+  "name": "@saas-ui/auth0",
   "version": "0.0.1",
   "description": "Auth0 authentication for Saas UI",
   "source": "src/index.ts",
@@ -56,10 +56,10 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/auth": "^2.3.0"
+    "@saas-ui/auth": "workspace:*"
   },
   "peerDependencies": {
-    "@auth0/auth0-spa-js": "2.1.2",
+    "@auth0/auth0-spa-js": "^2.1.3",
     "@chakra-ui/react": ">=2.4.9",
     "@emotion/react": ">=11.0.0",
     "@emotion/styled": ">=11.0.0",
@@ -68,6 +68,6 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@auth0/auth0-spa-js": "2.1.2"
+    "@auth0/auth0-spa-js": "2.1.3"
   }
 }
