--- a/packages/saas-ui-file-upload/package.json
+++ b/packages/saas-ui-file-upload/package.json
@@ -67,6 +67,9 @@
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.6",
+    "@emotion/react": ">=11",
+    "@emotion/styled": ">=11",
+    "framer-motion": ">=6",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
