--- a/packages/saas-ui-file-upload/package.json
+++ b/packages/saas-ui-file-upload/package.json
@@ -67,11 +67,14 @@
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.6",
+    "@emotion/react": ">=11",
+    "@emotion/styled": ">=11",
+    "framer-motion": ">=6",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@saas-ui/forms": "workspace:*",
-    "react-icons": "^4.12.0"
+    "react-icons": "^5.0.1"
   }
 }
