--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -3,8 +3,8 @@
   "type": "module",
   "version": "1.1.30",
   "scripts": {
-    "dev": "sb dev -p 6006",
-    "build": "sb build --debug --loglevel verbose"
+    "dev": "storybook dev -p 6006 --debug",
+    "build": "storybook build --debug --loglevel verbose"
   },
   "dependencies": {
     "@babel/core": "^7.23.9",
@@ -16,26 +16,25 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@saas-ui/react": "workspace:*",
-    "@saas-ui/storybook-addon": "^2.0.3",
-    "@storybook/addon-a11y": "^7.6.16",
-    "@storybook/addon-storysource": "^7.6.16",
-    "@storybook/addon-toolbars": "^7.6.16",
-    "@storybook/addon-viewport": "^7.6.16",
-    "@storybook/addons": "^7.6.16",
-    "@storybook/cli": "^7.6.16",
-    "@storybook/client-api": "^7.6.16",
-    "@storybook/client-logger": "7.6.16",
-    "@storybook/preview-api": "7.6.16",
-    "@storybook/preview-web": "^7.6.16",
-    "@storybook/react": "^7.6.16",
-    "@storybook/react-vite": "^7.6.16",
-    "@storybook/testing-react": "^2.0.1",
-    "@storybook/types": "^7.6.16",
+    "@saas-ui/storybook-addon": "workspace:*",
+    "@storybook/addon-a11y": "^8.0.8",
+    "@storybook/addon-storysource": "^8.0.8",
+    "@storybook/addon-toolbars": "^8.0.8",
+    "@storybook/addon-viewport": "^8.0.8",
+    "@storybook/cli": "^8.0.8",
+    "@storybook/client-logger": "^8.0.8",
+    "@storybook/manager-api": "^8.0.8",
+    "@storybook/preview-api": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-vite": "^8.0.8",
+    "@storybook/types": "^8.0.8",
     "@swc/core": "^1.4.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.4.2",
     "vite": "^4.5.2"
-  }
+  },
+  "devDependencies": {}
 }
