--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -35,5 +35,8 @@
     "react-dom": "^18.2.0",
     "typescript": "^5.4.2",
     "vite": "^4.5.2"
+  },
+  "devDependencies": {
+    "storybook": "8.0.8"
   }
 }
