chore: update dependencies

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
-    "dev": "concurrently \"contentlayer dev\" \"next dev --port 3020\"",
-    "dev:contentlayer": "contentlayer dev",
+    "dev": "concurrently \"contentlayer2 dev\" \"next dev --port 3020\"",
+    "dev:contentlayer": "contentlayer2 dev",
     "build": "yarn gen:contentlayer && next build",
     "start": "next start",
     "lint": "next lint",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
     "prettify": "prettier --write src",
     "gen:theme-typings": "chakra-cli tokens src/styles/theme.ts",
-    "gen:contentlayer": "contentlayer build --config ./contentlayer.config.ts --verbose",
+    "gen:contentlayer": "contentlayer2 build --config ./contentlayer.config.ts --verbose",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -33,26 +33,26 @@
     "@fontsource-variable/inter": "^5.0.16",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.3.0",
-    "@next/bundle-analyzer": "^13.5.6",
+    "@next/bundle-analyzer": "^14.2.3",
     "@octokit/rest": "^19.0.13",
     "@saas-ui/command-bar": "workspace:^",
     "@saas-ui/forms": "workspace:*",
     "@saas-ui/palette": "workspace:*",
     "@saas-ui/props-docs": "workspace:*",
     "@saas-ui/react": "workspace:*",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.6",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.2",
     "@svgr/webpack": "^5.5.0",
-    "@vercel/og": "^0.5.20",
+    "@vercel/og": "^0.6.2",
     "canvas-confetti": "^1.9.2",
     "change-case": "^5.4.3",
-    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.4.6",
     "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "github-slugger": "^2.0.0",
     "match-sorter": "^6.3.4",
-    "next": "^14.1.0",
-    "next-contentlayer": "^0.3.4",
+    "next": "^14.2.3",
+    "next-contentlayer2": "^0.4.6",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.5.0",
     "prism-react-renderer": "^1.3.5",
@@ -65,10 +65,10 @@
     "react-markdown": "^8.0.7",
     "react-shadow": "^20.4.0",
     "reading-time": "^1.5.0",
+    "rehype-slug": "^6.0.0",
     "remark-code-titles": "^0.1.2",
     "remark-emoji": "^3.1.2",
-    "remark-gfm": "^3.0.1",
-    "remark-slug": "^7.0.1",
+    "remark-gfm": "^4.0.0",
     "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
