--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
-  "baseBranch": "origin/main",
-  "pipeline": {
+  "$schema": "https://turbo.build/schema.json",
+  "tasks": {
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "*/dist/**"]
