chore: update deps

--- a/package.json
+++ b/package.json
@@ -72,60 +72,57 @@
   ],
   "devDependencies": {
     "@chakra-ui/cli": "^2.4.1",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^3.0.0-next.13",
     "@changesets/cli": "^2.27.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@manypkg/get-packages": "^1.1.3",
-    "@swc/core": "^1.5.7",
-    "@types/node": "^18.19.17",
+    "@swc/core": "^1.7.11",
+    "@types/node": "^18.19.44",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "browserslist": "^4.23.0",
+    "browserslist": "^4.23.3",
     "cross-env": "^7.0.3",
-    "date-fns": "^3.3.1",
-    "eslint": "^8.56.0",
+    "date-fns": "^3.6.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-storybook": "^0.6.15",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^11.3.28",
     "husky": "^8.0.3",
     "hygen": "^6.2.11",
     "jsdom": "^22.1.0",
     "lint-staged": "^13.3.0",
     "lodash": "^4.17.21",
-    "node-releases": "^2.0.14",
-    "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-is": "^18.2.0",
-    "react-test-renderer": "^18.2.0",
+    "node-releases": "^2.0.18",
+    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-is": "^18.3.1",
+    "react-test-renderer": "^18.3.1",
     "rimraf": "^4.4.1",
     "ts-node": "^10.9.2",
-    "tsup": "^8.0.2",
-    "tsx": "^4.7.1",
-    "turbo": "1.11.3",
-    "typescript": "^5.4.2",
+    "tsup": "^8.2.4",
+    "tsx": "^4.17.0",
+    "turbo": "2.0.14",
+    "typescript": "^5.5.4",
     "vercel-submodules": "^1.0.10",
-    "vitest": "^0.34.6",
+    "vitest": "^2.0.5",
     "yup": "^1.4.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "resolutions": {
     "unist-util-visit": "4.0.0",
     "react": "18.2.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@zag-js/core": "^0.38.1",
-    "@zag-js/store": "^0.38.1",
-    "@zag-js/file-upload": "^0.38.1",
     "@storybook/react-dom-shim@npm": "8.0.8",
     "@storybook/cli": "8.0.8"
   },
   "packageManager": "yarn@4.2.2",
   "dependencies": {
-    "@microsoft/api-extractor": "^7.43.0"
+    "@microsoft/api-extractor": "^7.47.6"
   }
 }
