--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -11,29 +11,29 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^3.0.0-next.13",
     "@chakra-ui/system": "2.6.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/inter": "^4.5.15",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/inter": "^5.0.20",
     "@saas-ui/next-workspaces": "^0.3.0",
     "@saas-ui/palette": "workspace:*",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/theme-glass": "workspace:*",
     "@svgr/webpack": "^5.5.0",
     "@types/lodash.debounce": "^4.0.9",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^11.3.28",
     "lodash.debounce": "^4.0.8",
-    "next": "^14.2.3",
+    "next": "^14.2.5",
     "next-seo": "^6.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.56",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
-    "typescript": "^5.4.2"
+    "@types/react": "^18.3.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
+    "typescript": "^5.5.4"
   }
 }
