--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -16,11 +16,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ark-ui/react": "^2.2.3",
+    "@ark-ui/react": "^3.7.0",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/props-docs": "^2.2.1",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^3.0.0-next.13",
     "@chakra-ui/react-env": "^3.1.0",
     "@chakra-ui/skip-nav": "^2.1.0",
     "@chakra-ui/system": "^2.6.2",
@@ -28,60 +28,60 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource-variable/inter": "^5.0.16",
-    "@mapbox/rehype-prism": "^0.8.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource-variable/inter": "^5.0.20",
+    "@mapbox/rehype-prism": "^0.9.0",
     "@mdx-js/loader": "^2.3.0",
     "@next/bundle-analyzer": "^14.2.3",
-    "@octokit/rest": "^19.0.13",
+    "@octokit/rest": "^21.0.1",
     "@saas-ui/command-bar": "workspace:^",
     "@saas-ui/forms": "workspace:*",
     "@saas-ui/palette": "workspace:*",
     "@saas-ui/props-docs": "workspace:*",
     "@saas-ui/react": "workspace:*",
-    "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.43.2",
+    "@supabase/ssr": "0.4.0",
+    "@supabase/supabase-js": "^2.45.1",
     "@svgr/webpack": "^5.5.0",
     "@vercel/og": "^0.6.2",
-    "canvas-confetti": "^1.9.2",
-    "change-case": "^5.4.3",
-    "contentlayer2": "^0.4.6",
-    "date-fns": "^3.3.1",
-    "framer-motion": "^10.18.0",
+    "canvas-confetti": "^1.9.3",
+    "change-case": "^5.4.4",
+    "contentlayer2": "^0.5.0",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.28",
     "github-slugger": "^2.0.0",
     "match-sorter": "^6.3.4",
-    "next": "^14.2.3",
-    "next-contentlayer2": "^0.4.6",
+    "next": "^14.2.5",
+    "next-contentlayer2": "^0.5.0",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.5.0",
     "prism-react-renderer": "^1.3.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-frame-component": "^5.2.6",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.8.0",
-    "react-live-runner": "^1.0.5",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.0",
+    "react-live-runner": "^1.0.7",
     "react-markdown": "^8.0.7",
-    "react-shadow": "^20.4.0",
+    "react-shadow": "^20.5.0",
     "reading-time": "^1.5.0",
     "rehype-slug": "^6.0.0",
     "remark-code-titles": "^0.1.2",
     "remark-emoji": "^3.1.2",
     "remark-gfm": "^4.0.0",
     "yup": "^1.4.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
-    "@types/node": "^18.19.17",
-    "@types/react": "^18.2.56",
+    "@types/node": "^18.19.44",
+    "@types/react": "^18.3.3",
     "concurrently": "^8.2.2",
-    "electron-to-chromium": "^1.4.673",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "electron-to-chromium": "^1.5.9",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
     "file-loader": "^6.2.0",
-    "typescript": "^5.4.2",
-    "webpack": "^5.91.0"
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0"
   }
 }
