--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -7,36 +7,37 @@
     "build": "storybook build --debug --loglevel verbose"
   },
   "dependencies": {
-    "@babel/core": "^7.24.5",
+    "@babel/core": "^7.25.2",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
-    "@babel/preset-typescript": "^7.24.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@chakra-ui/react": "^3.0.0-next.13",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/storybook-addon": "workspace:*",
-    "@storybook/addon-a11y": "^8.1.1",
-    "@storybook/addon-storysource": "^8.1.1",
-    "@storybook/addon-toolbars": "^8.1.1",
-    "@storybook/addon-viewport": "^8.1.1",
-    "@storybook/cli": "^8.1.1",
-    "@storybook/client-logger": "^8.1.1",
-    "@storybook/manager-api": "^8.1.1",
-    "@storybook/preview-api": "^8.1.1",
-    "@storybook/react": "^8.1.1",
-    "@storybook/react-vite": "^8.1.1",
-    "@storybook/types": "^8.1.1",
-    "@swc/core": "^1.5.7",
-    "@vitejs/plugin-react": "^4.2.1",
-    "framer-motion": "^10.18.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.4.2",
-    "vite": "^4.5.2"
+    "@storybook/addon-a11y": "^8.2.9",
+    "@storybook/addon-storysource": "^8.2.9",
+    "@storybook/addon-themes": "^8.2.9",
+    "@storybook/addon-toolbars": "^8.2.9",
+    "@storybook/addon-viewport": "^8.2.9",
+    "@storybook/cli": "^8.2.9",
+    "@storybook/client-logger": "^8.2.9",
+    "@storybook/manager-api": "^8.2.9",
+    "@storybook/preview-api": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
+    "@storybook/types": "^8.2.9",
+    "@swc/core": "^1.7.11",
+    "@vitejs/plugin-react": "^4.3.1",
+    "framer-motion": "^11.3.28",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.1"
   },
   "devDependencies": {
-    "storybook": "8.1.1"
+    "storybook": "8.2.9"
   }
 }
