--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -64,20 +64,20 @@
   },
   "homepage": "https://github.com/saas-ui/saas-ui#readme",
   "devDependencies": {
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^3.0.0-next.13",
     "@emotion/react": ">=11.1.5",
     "@emotion/styled": ">=11.1.5",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/theme-glass": "workspace:*",
-    "@storybook/types": "^8.1.1",
-    "framer-motion": ">=10",
-    "react": "^18.2.0",
-    "tsup": "^8.0.2"
+    "@storybook/types": "^8.2.9",
+    "framer-motion": "^11.3.28",
+    "react": "^18.3.1",
+    "tsup": "^8.2.4"
   },
   "dependencies": {
-    "@storybook/components": "^8.1.1",
-    "@storybook/manager-api": "^8.1.1",
-    "@storybook/preview-api": "^8.1.1"
+    "@storybook/components": "^8.2.9",
+    "@storybook/manager-api": "^8.2.9",
+    "@storybook/preview-api": "^8.2.9"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.0.0",
