chore: improve navigation

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -5,6 +5,7 @@
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
     "dev": "concurrently \"contentlayer2 dev\" \"next dev --port 3020\"",
+    "dev:next": "next dev --port 3020",
     "dev:contentlayer": "contentlayer2 dev",
     "build": "yarn gen:contentlayer && next build",
     "start": "next start",
@@ -35,6 +36,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@next/bundle-analyzer": "^14.2.4",
     "@octokit/rest": "^21.0.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@saas-ui/command-bar": "workspace:^",
     "@saas-ui/forms": "workspace:*",
     "@saas-ui/palette": "workspace:*",
@@ -46,13 +48,13 @@
     "@vercel/og": "^0.6.2",
     "canvas-confetti": "^1.9.3",
     "change-case": "^5.4.4",
-    "contentlayer2": "^0.4.6",
+    "contentlayer2": "^0.5.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^10.18.0",
     "github-slugger": "^2.0.0",
     "match-sorter": "^6.3.4",
-    "next": "^14.2.4",
-    "next-contentlayer2": "^0.4.6",
+    "next": "^14.2.5",
+    "next-contentlayer2": "^0.5.0",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.5.0",
     "prism-react-renderer": "^1.3.5",
