--- a/packages/saas-ui-auth/package.json
+++ b/packages/saas-ui-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/auth",
-  "version": "3.2.2",
+  "version": "3.3.0-next.0",
   "description": "Authentication provider and components for Chakra UI",
   "source": "src/index.ts",
   "exports": {
