--- a/packages/saas-ui-supabase/package.json
+++ b/packages/saas-ui-supabase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/supabase",
-  "version": "2.2.0",
+  "version": "2.2.1-next.0",
   "description": "Saas UI Supabase integration",
   "source": "src/index.ts",
   "exports": {
@@ -59,7 +59,7 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/auth": "^3.2.0"
+    "@saas-ui/auth": "^3.3.0-next.0"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.9",
