--- a/packages/saas-ui-magic/package.json
+++ b/packages/saas-ui-magic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/magic",
-  "version": "2.1.3-next.0",
+  "version": "2.1.3",
   "description": "Saas UI Magic.link integration",
   "source": "src/index.ts",
   "exports": {
@@ -55,7 +55,7 @@
     "magic.link"
   ],
   "dependencies": {
-    "@saas-ui/auth": "^3.3.0-next.0"
+    "@saas-ui/auth": "^3.3.0"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.4.9",
