--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -26,6 +26,9 @@
       "@/hooks/*": ["src/hooks/*"],
       "@saas-ui/react": ["../../packages/saas-ui-react/src"],
       "@saas-ui/forms": ["../../packages/saas-ui/forms/src"],
+      "@saas-ui/modals": ["../../packages/saas-ui/modals/src"],
+      "@saas-ui/hotkeys": ["../../packages/saas-ui/hotkeys/src"],
+      "@saas-ui/use-hotkeys": ["../../packages/saas-ui/use-hotkeys/src"],
       "@saas-ui/data-table": ["../../packages/saas-ui/data-table/src"],
       "@saas-ui-pro/feature-flags": [
         "../../packages/pro/saas-ui/feature-flags/src"
