feat: upgrade to chakra 2.9.3

--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "tooling/storybook-addon"
   ],
   "devDependencies": {
-    "@chakra-ui/cli": "^2.4.1",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/cli": "^2.5.1",
+    "@chakra-ui/react": "^2.9.3",
     "@changesets/cli": "^2.27.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -124,8 +124,5 @@
     "@storybook/react-dom-shim@npm": "8.0.8",
     "@storybook/cli": "8.0.8"
   },
-  "packageManager": "yarn@4.2.2",
-  "dependencies": {
-    "@microsoft/api-extractor": "^7.47.0"
-  }
+  "packageManager": "yarn@4.2.2"
 }
