--- a/packages/saas-ui-command-bar/package.json
+++ b/packages/saas-ui-command-bar/package.json
@@ -73,11 +73,12 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@chakra-ui/anatomy": "^2.2.2",
+    "@chakra-ui/anatomy": "^2.3.1",
     "@chakra-ui/react-utils": "^2.0.12",
-    "@chakra-ui/styled-system": "^2.9.2",
-    "@chakra-ui/theme-tools": "^2.1.2",
-    "@chakra-ui/utils": "^2.0.15",
+    "@chakra-ui/styled-system": "^2.10.2",
+    "@chakra-ui/theme": "^3.4.2",
+    "@chakra-ui/theme-tools": "^2.2.2",
+    "@chakra-ui/utils": "^2.1.2",
     "cmdk": "^1.0.0"
   },
   "peerDependencies": {
