--- a/packages/saas-ui-nprogress/package.json
+++ b/packages/saas-ui-nprogress/package.json
@@ -57,11 +57,14 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@chakra-ui/utils": "^2.0.15",
+    "@chakra-ui/utils": "^2.1.2",
     "@tanem/react-nprogress": "^5.0.51"
   },
   "peerDependencies": {
-    "@chakra-ui/system": ">=2.5.0",
+    "@chakra-ui/react": ">=2.9.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": ">=5.5.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   }
