feat: upgrade deps

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -18,25 +18,22 @@
   },
   "dependencies": {
     "@ark-ui/react": "^4.1.0",
-    "@chakra-ui/icons": "^2.2.2",
     "@chakra-ui/next-js": "^2.3.2",
     "@chakra-ui/props-docs": "^2.3.2",
     "@chakra-ui/react": "^2.9.3",
     "@chakra-ui/react-env": "^3.1.0",
-    "@chakra-ui/skip-nav": "^2.1.0",
-    "@chakra-ui/system": "^2.6.2",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fontsource-variable/inter": "^5.0.18",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource-variable/inter": "^5.1.0",
     "@mapbox/rehype-prism": "^0.9.0",
     "@mdx-js/loader": "^2.3.0",
-    "@next/bundle-analyzer": "^14.2.4",
-    "@octokit/rest": "^21.0.0",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@next/bundle-analyzer": "^14.2.14",
+    "@octokit/rest": "^21.0.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@saas-ui/command-bar": "workspace:^",
     "@saas-ui/forms": "workspace:*",
     "@saas-ui/palette": "workspace:*",
@@ -45,24 +42,24 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@svgr/webpack": "^5.5.0",
-    "@vercel/og": "^0.6.2",
+    "@vercel/og": "^0.6.3",
     "canvas-confetti": "^1.9.3",
     "change-case": "^5.4.4",
-    "contentlayer2": "^0.5.0",
+    "contentlayer2": "^0.5.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^11.9.0",
     "github-slugger": "^2.0.0",
     "match-sorter": "^6.3.4",
-    "next": "^14.2.5",
-    "next-contentlayer2": "^0.5.0",
+    "next": "14.2.12",
+    "next-contentlayer2": "^0.5.1",
     "next-mdx-remote": "^4.4.1",
-    "next-seo": "^6.5.0",
+    "next-seo": "^6.6.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-frame-component": "^5.2.7",
-    "react-icons": "^5.2.1",
-    "react-intersection-observer": "^9.10.3",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-live-runner": "^1.0.7",
     "react-markdown": "^8.0.7",
     "react-shadow": "^20.5.0",
@@ -76,14 +73,14 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
-    "@types/node": "^18.19.39",
-    "@types/react": "^18.3.3",
+    "@types/node": "^18.19.54",
+    "@types/react": "^18.3.11",
     "concurrently": "^8.2.2",
-    "electron-to-chromium": "^1.4.810",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.4",
+    "electron-to-chromium": "^1.5.31",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.14",
     "file-loader": "^6.2.0",
-    "typescript": "^5.5.2",
-    "webpack": "^5.92.1"
+    "typescript": "^5.6.2",
+    "webpack": "^5.95.0"
   }
 }
