--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -59,13 +59,13 @@
     "@chakra-ui/styled-system": "^2.10.2",
     "@chakra-ui/theme-tools": "^2.2.2",
     "@chakra-ui/utils": "^2.1.2",
-    "@internationalized/date": "^3.5.4",
-    "@react-aria/calendar": "^3.5.8",
-    "@react-aria/datepicker": "^3.10.1",
-    "@react-aria/i18n": "^3.11.1",
-    "@react-aria/interactions": "^3.21.3",
-    "@react-stately/calendar": "^3.5.1",
-    "@react-stately/datepicker": "^3.9.4",
+    "@internationalized/date": "3.5.6",
+    "@react-aria/calendar": "^3.5.12",
+    "@react-aria/datepicker": "^3.11.3",
+    "@react-aria/i18n": "^3.12.3",
+    "@react-aria/interactions": "^3.22.3",
+    "@react-stately/calendar": "^3.5.5",
+    "@react-stately/datepicker": "^3.10.3",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/modals": "workspace:*"
   },
@@ -78,8 +78,8 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@react-types/datepicker": "^3.7.4",
-    "@react-types/shared": "^3.23.1",
+    "@react-types/datepicker": "^3.8.3",
+    "@react-types/shared": "^3.25.0",
     "@saas-ui/forms": "workspace:*",
     "date-fns": "^3.6.0"
   }
