--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -69,15 +69,15 @@
     "@emotion/styled": ">=11.1.5",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/theme-glass": "workspace:*",
-    "@storybook/types": "^8.1.10",
-    "framer-motion": ">=10",
+    "@storybook/types": "^8.3.4",
+    "framer-motion": "^11.9.0",
     "react": "^18.3.1",
-    "tsup": "^8.1.0"
+    "tsup": "^8.3.0"
   },
   "dependencies": {
-    "@storybook/components": "^8.1.10",
-    "@storybook/manager-api": "^8.1.10",
-    "@storybook/preview-api": "^8.1.10"
+    "@storybook/components": "^8.3.4",
+    "@storybook/manager-api": "^8.3.4",
+    "@storybook/preview-api": "^8.3.4"
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.0.0",
