--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "w": "yarn workspace",
     "dev:web": "yarn w website dev",
     "dev:palette": "yarn w palette-docs dev",
-    "changelog:gen": "ts-node scripts/changelog-generate.ts",
-    "changelog:write": "ts-node scripts/changelog-write.ts",
+    "changelog:gen": "tsx scripts/changelog-generate.ts",
+    "changelog:write": "tsx scripts/changelog-write.ts",
     "changelog:commit": "git add CHANGELOG.md && git commit -am 'docs: add changelog' && git push",
     "changeset:next": "yarn changeset pre enter next",
     "changeset:version": "yarn changelog:gen && changeset version",
@@ -103,7 +103,6 @@
     "react-is": "^18.3.1",
     "react-test-renderer": "^18.3.1",
     "rimraf": "^4.4.1",
-    "ts-node": "^10.9.2",
     "tsup": "^8.3.0",
     "tsx": "^4.19.1",
     "turbo": "2.1.3",
@@ -119,5 +118,8 @@
     "@storybook/react-dom-shim@npm": "8.0.8",
     "@storybook/cli": "8.0.8"
   },
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.2.2",
+  "dependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0"
+  }
 }
