--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "tooling/props-docs",
     "tooling/storybook-addon"
   ],
-  "devDependencies": {
+  "dependencies": {
     "@chakra-ui/cli": "^2.5.2",
     "@chakra-ui/react": "^2.9.3",
     "@changesets/cli": "^2.27.8",
@@ -78,6 +78,7 @@
     "@emotion/styled": "^11.13.0",
     "@manypkg/get-packages": "^1.1.3",
     "@swc/core": "^1.7.28",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^18.19.54",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -113,13 +114,7 @@
     "zod": "^3.23.8"
   },
   "resolutions": {
-    "unist-util-visit": "4.0.0",
-    "react": "18.2.0",
-    "@storybook/react-dom-shim@npm": "8.0.8",
-    "@storybook/cli": "8.0.8"
+    "unist-util-visit": "4.0.0"
   },
-  "packageManager": "yarn@4.2.2",
-  "dependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0"
-  }
+  "packageManager": "yarn@4.2.2"
 }
