--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "private": true,
   "author": "Eelco Wiersma <eelco@appulse.nl>",
   "scripts": {
@@ -35,6 +35,7 @@
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@saas-ui/command-bar": "workspace:^",
+    "@saas-ui/file-upload": "workspace:*",
     "@saas-ui/forms": "workspace:*",
     "@saas-ui/palette": "workspace:*",
     "@saas-ui/props-docs": "workspace:*",
