--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -37,7 +37,7 @@
   "homepage": "https://saas-ui.dev/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/saas-js/saas-ui",
+    "url": "git+https://github.com/saas-js/saas-ui.git",
     "directory": "packages/saas-ui-react"
   },
   "keywords": [
