feat: update chakra version range

--- a/packages/saas-ui-command-bar/package.json
+++ b/packages/saas-ui-command-bar/package.json
@@ -81,7 +81,7 @@
     "cmdk": "^1.0.0"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.6",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
