--- a/packages/saas-ui-modals/package.json
+++ b/packages/saas-ui-modals/package.json
@@ -91,7 +91,7 @@
     "@saas-ui/react-utils": "workspace:*"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.9",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "@emotion/react": ">=11.0.0",
     "@emotion/styled": ">=11.0.0",
     "framer-motion": ">=6.0.0",
