--- a/packages/saas-ui-theme/package.json
+++ b/packages/saas-ui-theme/package.json
@@ -88,7 +88,7 @@
     "@chakra-ui/theme-tools": "^2.2.5"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.6",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "react": ">=18.0.0"
   }
 }
