--- a/packages/saas-ui-charts/package.json
+++ b/packages/saas-ui-charts/package.json
@@ -32,7 +32,7 @@
     "recharts": "^2.13.0"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.8",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "@emotion/react": ">=11",
     "react": ">=18",
     "react-dom": ">=18"
