--- a/packages/saas-ui-clerk/package.json
+++ b/packages/saas-ui-clerk/package.json
@@ -60,7 +60,7 @@
     "@saas-ui/auth": "workspace:*"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.6",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "@clerk/clerk-react": ">=4.12.0 <=4.18.0",
     "@emotion/react": ">=11.4.1",
     "@emotion/styled": ">=11.3.0",
