--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -107,7 +107,7 @@
     "react-hook-form": "^7.53.0"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.9",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "@emotion/react": ">=11.0.0",
     "@emotion/styled": ">=11.0.0",
     "framer-motion": ">=6.0.0",
