--- a/packages/saas-ui-magic/package.json
+++ b/packages/saas-ui-magic/package.json
@@ -58,7 +58,7 @@
     "@saas-ui/auth": "^3.4.0"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.9",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "@emotion/react": ">=11.0.0",
     "@emotion/styled": ">=11.0.0",
     "framer-motion": ">=6.0.0",
