--- a/packages/saas-ui-react-utils/package.json
+++ b/packages/saas-ui-react-utils/package.json
@@ -59,7 +59,7 @@
     "@chakra-ui/utils": "^2.2.1"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.6",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "react": ">=18.0.0"
   }
 }
