--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -67,7 +67,7 @@
     "@saas-ui/theme": "workspace:*"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": ">=5.5.0",
