--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -80,7 +80,7 @@
     "@storybook/preview-api": "^8.3.5"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.0.0",
+    "@chakra-ui/react": ">=2.0.0 <3",
     "@saas-ui/react": ">=2.10.5",
     "@storybook/components": ">=8.0.0",
     "@storybook/manager-api": ">=8.0.0",
